--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/d3": "^7.4.3",
+    "d3": "^7.8.5",
     "express": "^4.17.1"
   }
 }
